manifest/demoteam/min-max-replicas-with-autoscaling/prod/manifest.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: min-max-replicas-with-autoscaling
    env: prod
    team: demoteam
  name: min-max-replicas-with-autoscaling
spec:
  template:
    metadata:
      annotations:
        fnatt.io/inject-ca-bundle: enabled
        fnatt.io/inject-ca-env: enabled
      labels:
        team: demoteam
        app: min-max-replicas-with-autoscaling
        env: prod
    spec:
      securityContext: {}
      containers:
      - image: nginxinc/nginx-unprivileged:alpine3.22-perl
        livenessProbe:
          periodSeconds: 3
          initialDelaySeconds: 10
          httpGet:
            path: /health/status
            port: 8080
        resources:
          requests:
            cpu: '0.5'
            memory: 512Mi
          limits:
            cpu: '2'
            memory: 2Gi
        securityContext: {}
        ports:
        - containerPort: 8080
        name: main
        readinessProbe:
          periodSeconds: 3
          initialDelaySeconds: 10
          httpGet:
            path: /health/status
            port: 8080
  selector:
    matchLabels:
      team: demoteam
      app: min-max-replicas-with-autoscaling
      env: prod
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  labels:
    app: min-max-replicas-with-autoscaling
    env: prod
    team: demoteam
  name: min-max-replicas-with-autoscaling
spec:
  ingressClassName: ingress-nginx-pm
  rules:
  - host: min-max-replicas-with-autoscaling.prod.fnatt.no
    http:
      paths:
      - path: /
        backend:
          service:
            port:
              number: 80
            name: min-max-replicas-with-autoscaling
        pathType: Prefix
---
apiVersion: v1
kind: Service
metadata:
  labels:
    app: min-max-replicas-with-autoscaling
    env: prod
    team: demoteam
  name: min-max-replicas-with-autoscaling
spec:
  ports:
  - port: 80
    targetPort: 8080
  type: ClusterIP
  selector:
    app: min-max-replicas-with-autoscaling
    env: prod
    team: demoteam
